spacing issue

--- a/client/styles/theme.less
+++ b/client/styles/theme.less
@@ -505,6 +505,7 @@ select.class-subject {
 #class-list .col-sm-3 {
   height: 293px;
   position: relative;
+  margin-bottom:24px;
 }
 
 // #class-list .btm-part {
